[package]
name = "mycraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_rapier3d = "0.16.0"
bevy_editor_pls={git = "https://github.com/MitchellMarinoDev/bevy_editor_pls.git"}

[dependencies.bevy]
version="0.8.0"
features = ["jpeg", "tga", "bmp", "dds", "flac", "mp3", "wav"]